<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_perfil_personal"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/imagen"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/profileImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/lastNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/otherRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otro" />
        </RadioGroup>

        <Spinner
            android:id="@+id/countrySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/genderRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/hobbiesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intereses_o_hobbies"
            app:layout_constraintTop_toBottomOf="@id/countrySpinner"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/readingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lectura"
            app:layout_constraintTop_toBottomOf="@id/hobbiesTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/sportsCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deporte"
            app:layout_constraintTop_toBottomOf="@id/readingCheckBox"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/musicCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_sica"
            app:layout_constraintTop_toBottomOf="@id/sportsCheckBox"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/artCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arte"
            app:layout_constraintTop_toBottomOf="@id/musicCheckBox"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/satisfactionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nivel_de_satisfacci_n_5"
            app:layout_constraintTop_toBottomOf="@id/artCheckBox"
            app:layout_constraintStart_toStartOf="parent" />

        <SeekBar
            android:id="@+id/satisfactionSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="10"
            android:progress="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/satisfactionTextView" />

        <Switch
            android:id="@+id/newsletterSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/suscribirse_al_bolet_n"
            app:layout_constraintTop_toBottomOf="@id/satisfactionSeekBar"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/guardar"
            app:layout_constraintTop_toBottomOf="@id/newsletterSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/profileSummaryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/resumen_del_perfil"
            app:layout_constraintTop_toBottomOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
